--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
   </head>
   <body>
     <h1>Welcome to the Weather App</h1>
-    <footer>Built by Lisa Lowagie</footer>
+    <footer>
+      Built by
+      <a href="https://github.com/LisaLowagie" target="_blank">
+        Lisa Lowagie
+      </a>
+      hosted on
+      <a href="https://github.com/LisaLowagie?tab=repositories" target="_blank">
+        Github</a
+      >
+      and hosted on
+      <a href="https://weatherapp-r1op.onrender.com/" target="_blank">
+        Render
+      </a>
+    </footer>
   </body>
 </html>
