Added the HTML project

--- a/index.html
+++ b/index.html
@@ -6,15 +6,23 @@
     <title>Weather App</title>
   </head>
   <body>
-    <h1>Welcome to the Weather App</h1>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a city" />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
+    <main>
+      <h1>Paris</h1>
+      <p>Time, Condition, Humidity</p>
+      🌞 21°C
+    </main>
     <footer>
-      Built by
-      <a href="https://github.com/LisaLowagie" target="_blank">
-        Lisa Lowagie
-      </a>
+      This project was coded by
+      <a href="https://github.com/LisaLowagie" target="_blank"> Lisa Lowagie</a>
       hosted on
       <a href="https://github.com/LisaLowagie?tab=repositories" target="_blank">
-        Github</a
+        open-sourced on Github</a
       >
       and hosted on
       <a href="https://weatherapp-r1op.onrender.com/" target="_blank">
