--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
             <div class="weather-app-unit">°C</div>
           </div>
         </div>
+        <div class="weather-forecast" id="forecast"></div>
       </main>
+
       <footer>
         This project was coded by
         <a href="https://github.com/LisaLowagie" target="_blank">
