--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         >
         and hosted on
         <a href="https://weatherapp-r1op.onrender.com/" target="_blank">
-          Render
+          Render.
         </a>
       </footer>
     </div>
