--- a/index.html
+++ b/index.html
@@ -61,8 +61,11 @@
           open-sourced on Github</a
         >
         and hosted on
-        <a href="https://weatherapp-r1op.onrender.com/" target="_blank">
-          Render.
+        <a
+          href="https://weatherappshecodeslisalowagie.netlify.app/"
+          target="_blank"
+        >
+          Netlify.
         </a>
       </footer>
     </div>
